--- a/visualize.ipynb
+++ b/visualize.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5ff7cd71-21d1-420c-b5ee-7a2adfa8cfa4",
+   "id": "d1147c32-d12e-45db-a7ba-26824c4b5d90",
    "metadata": {},
    "source": [
     "# Dimensionality Reduction, Animated\n",
@@ -21,21 +21,23 @@
     "In this post we're going to apply UMAP to the MNIST dataset, a collection of 70,000 handwritten digits. Each digit is an image of 28 by 28 grayscale pixels, making the dimensionality of the dataset 784. UMAP will embed this dataset into two dimensions, allowing us to understand its structure.\n",
     "\n",
     "To be honest, the MNIST dataset is already used way too often in machine learning demos, including those about UMAP.\n",
-    "What's done less often, is look at _how_ UMAP creates an embedding, by visualizing the intermediate results at every step (also known as an epoch).\n",
-    "\n",
+    "What's done less often, is look at _how_ UMAP creates an embedding, by visualizing the intermediate results at every step (also known as an epoch)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c3f58fce-7508-4273-8117-b0270b41ed49",
+   "metadata": {},
+   "source": [
     "## Result\n",
     "\n",
     "The result of this notebook is an animation where each frame is an epoch.\n",
-    "On the right are random samples of each digit.\n",
-    "This gives us an idea of how all the variations look like.\n",
-    "Plus, it serves as a legend. \n",
-    "\n",
-    "https://github.com/jeroenjanssens/umap-animated/assets/1368256/cc7aa083-20db-4fe7-9647-98992676ab3c"
+    "On the right are random samples of each digit, to give us an idea of how all the variations look like and to serve as a legend."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 22,
    "id": "0c37ebbf-5cd1-4c1c-9f99-e1f42555e17a",
    "metadata": {},
    "outputs": [
@@ -63,19 +65,41 @@
   },
   {
    "cell_type": "markdown",
+   "id": "13085a01-6a62-43b1-a929-e27becdbc3f8",
+   "metadata": {},
+   "source": [
+    "https://github.com/jeroenjanssens/umap-animated/assets/1368256/cc7aa083-20db-4fe7-9647-98992676ab3c"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e1a43340-87ac-4758-bd54-de8fc7fea127",
+   "metadata": {},
+   "source": [
+    "There are a couple of interesting things to note:\n",
+    "\n",
+    "- UMAP has a decent embedding already after a couple of epochs.\n",
+    "- The long shape of cluster \"1\" is probably because the way a \"1\" is written, depends mostly on the angle. Other digits have more degrees of freedom.\n",
+    "- The clusters \"3\", \"5\", \"8\" are close together. Probably because they're often confused.\n",
+    "- The same can be said for clusters \"4\", \"7\", and \"9\".\n",
+    "- Towards the end of the optimization the noisiness is reduced."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e775d0eb-7b57-4e48-a4f4-fadef3d73446",
    "metadata": {},
    "source": [
     "## Applying UMAP\n",
     "\n",
-    "The notebook _prepare.ipynb_ prepares the data necessary to generate the visualizations and animations.\n",
+    "The notebook _prepare.ipynb_ applies UMAP and prepares the data necessary to generate the visualizations and animations.\n",
     "It creates two files: _data/digits.parquet_ and _data/epochs.parquet_.\n",
     "Because these two files are already present in the repository, you don't necessarily need to run this notebook."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "id": "1bc9c990-d1cc-475a-a183-80b7c9546742",
    "metadata": {},
    "outputs": [],
@@ -103,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "e64016c2-163f-4e03-860c-479dc1b3d9b9",
    "metadata": {},
    "outputs": [
@@ -141,7 +165,7 @@
        "└────────┴────────┴────────┴────────┴────────┴───┴──────────┴──────────┴─────────┴─────────┴───────┘"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "b673f9ad-3399-4eeb-b8a0-0fc49067a59b",
    "metadata": {},
    "outputs": [],
@@ -206,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "c48543c9-c1d9-4fd6-bd7d-8e91b3c874a5",
    "metadata": {},
    "outputs": [
@@ -243,7 +267,7 @@
        "└───────┴───────┴─────┴─────┘"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "936dd8e3-be7f-48b0-a156-555efe3df30b",
    "metadata": {},
    "outputs": [
@@ -339,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "e3141b82-aad7-46cd-9425-e689d1792855",
    "metadata": {},
    "outputs": [],
@@ -365,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "f37a2955-07c6-4b1c-879d-91aaf54bd8a7",
    "metadata": {},
    "outputs": [
@@ -388,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "2ca6e5d6-a90b-448b-8bb3-aac84df968f0",
    "metadata": {},
    "outputs": [
@@ -411,6 +435,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d522ffad-467f-42ae-ad2e-dc68a22be1f2",
+   "metadata": {},
+   "source": [
+    "Note that we're using an unsupervised algorithm here, meaning that UMAP doesn't know which high-dimensional vector belongs to which digit. The coloring is only used for visualization purposes."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d34dc187-e980-4a9b-950d-4d6f619b29b3",
    "metadata": {},
    "source": [
@@ -428,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "92c502b4-ef4d-41e4-9287-416fa3eec624",
    "metadata": {},
    "outputs": [
@@ -465,7 +497,7 @@
        "└───────┴──────────┴──────────┴───────┴───────┘"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -487,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "id": "ced19b9e-6e00-446d-8ccf-1581ccc360b5",
    "metadata": {},
    "outputs": [],
@@ -510,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "8e90552f-e456-497f-8560-88642ae7b8c4",
    "metadata": {},
    "outputs": [],
@@ -556,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 13,
    "id": "e10266c2-c9d1-47e9-9148-63c04be431de",
    "metadata": {},
    "outputs": [],
@@ -577,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 14,
    "id": "622b4bcf-7435-4268-a15a-092bc07366e9",
    "metadata": {},
    "outputs": [
@@ -616,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "adf35d5f-2b47-4ca2-bb55-d3912d13c509",
    "metadata": {},
    "outputs": [
@@ -649,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "18807d48-8fbf-4a22-817e-db93899c5a0c",
    "metadata": {},
    "outputs": [
@@ -682,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "id": "f3fd91f3-6fd7-459d-bf60-7b4f9dd527e6",
    "metadata": {},
    "outputs": [],
@@ -708,36 +740,15 @@
    "source": [
     "## Animate\n",
     "\n",
-    "To create the animation, we first generate all the frames as individual PNG files.\n",
-    "We then use `ffmpeg` to stitch the 200 PNG files into an MP4 movie.\n",
-    "(Plotnine offers a [PlotnineAnimation](https://plotnine.org/reference/PlotnineAnimation.html) class to animate ggplot objects, but it currently [has some issues](https://github.com/has2k1/plotnine/issues/816).)"
+    "To create the animation, we first generate all the frames as individual PNG files."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 18,
    "id": "49124af2-ed21-438a-a7ed-b04d5b036993",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Exception ignored in: <bound method IPythonKernel._clean_thread_parent_frames of <ipykernel.ipkernel.IPythonKernel object at 0x1058a59a0>>\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/jeroen/Library/Caches/pypoetry/virtualenvs/non-package-mode-ZsQjsKQj-py3.12/lib/python3.12/site-packages/ipykernel/ipkernel.py\", line 775, in _clean_thread_parent_frames\n",
-      "    def _clean_thread_parent_frames(\n",
-      "\n",
-      "KeyboardInterrupt: \n",
-      "Exception ignored in: <bound method IPythonKernel._clean_thread_parent_frames of <ipykernel.ipkernel.IPythonKernel object at 0x1058a59a0>>\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/jeroen/Library/Caches/pypoetry/virtualenvs/non-package-mode-ZsQjsKQj-py3.12/lib/python3.12/site-packages/ipykernel/ipkernel.py\", line 775, in _clean_thread_parent_frames\n",
-      "    def _clean_thread_parent_frames(\n",
-      "\n",
-      "KeyboardInterrupt: \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for i in range(num_epochs):\n",
     "    combine_plots([\n",
@@ -747,8 +758,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ee71696c-4d0d-47d5-847c-86547a0ecaa9",
+   "metadata": {},
+   "source": [
+    "We then use `ffmpeg` to stitch the 200 PNG files into an MP4 movie.\n",
+    "(Plotnine offers a [PlotnineAnimation](https://plotnine.org/reference/PlotnineAnimation.html) class to animate ggplot objects, but it currently [has some issues](https://github.com/has2k1/plotnine/issues/816).)\n",
+    "\n",
+    "The most important argument is `-i`, which specifies the PNG files. The arguments `-pix_fmt`, `-vcodec`, and `-crf` define the video encoding and compression. The argument `-y` causes `ffmpeg` to override existing files."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "id": "df043e42-233b-4a1b-8e11-0319359bb4ab",
    "metadata": {},
    "outputs": [],
@@ -775,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 20,
    "id": "e9196d03-d6e6-45c3-a8ff-a89ee1535f1c",
    "metadata": {},
    "outputs": [
@@ -807,6 +829,37 @@
    "metadata": {},
    "source": [
     "https://github.com/jeroenjanssens/umap-animated/assets/1368256/cc7aa083-20db-4fe7-9647-98992676ab3c"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4afd93af-59ff-40eb-973c-36921487caaf",
+   "metadata": {},
+   "source": [
+    "## Conclusion\n",
+    "\n",
+    "There are a couple of interesting things to note about this animation:\n",
+    "\n",
+    "- UMAP has a decent embedding already after a couple of epochs.\n",
+    "- The long shape of cluster \"1\" is probably because the way a \"1\" is written, depends mostly on the angle. Other digits have more degrees of freedom.\n",
+    "- The clusters \"3\", \"5\", \"8\" are close together. Probably because they're often confused.\n",
+    "- The same can be said for clusters \"4\", \"7\", and \"9\".\n",
+    "- Towards the end of the optimization the noisiness is reduced.\n",
+    "\n",
+    "This animation suggests that visualizing and animating intermediate results of otherwise complicated algorithms can help us understand them. They can be complementary to the math and the implementation of the algorithms."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "53475dee-8577-486e-a78a-70f864b29607",
+   "metadata": {},
+   "source": [
+    "## References\n",
+    "\n",
+    "- [UMAP](https://umap-learn.readthedocs.io/en/latest/)\n",
+    "- [Forked version of UMAP that saves intermediate embeddings](https://github.com/jeroenjanssens/umap)\n",
+    "- [MNIST Database](https://en.wikipedia.org/wiki/MNIST_database)\n",
+    "- [ffmpeg](https://ffmpeg.org/)"
    ]
   }
  ],
